--- a/index.html
+++ b/index.html
@@ -1,64 +1,48 @@
-<!DOCTYPE html> <!-- HTML version Here it is HTML 5 -->
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Jayesh</title>
+    <link rel="stylesheet" href="css/styles.css"
+    <link rel="icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@200&family=Sacramento&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <div class="top-container">
+      <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+      <h1>I'm Jayesh</h1>
+      <h2>a Student</h2>
+      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+      <img src="images/mountain.png" alt="mountain-img">
+    </div>
 
-<head>
-  <meta charset="utf-8">
-  <title>Jayesh's Personal Site</title>
-</head>
+    <div class="middle-container">
+      <div class="profile">
+        <img src="images/Profile.jpg" alt="Profile picture">
+        <h2>Hi</h2>
+        <p class="info">I am student of electronics engineering at <a href="https://ves.ac.in/vesit/">VESIT</a></p>
+      </div>
+      <hr>
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="code" src="https://t4.ftcdn.net/jpg/03/23/34/23/240_F_323342327_NSF5sxbVoVfWuEIFB33naH7QZcPPvdZ9.jpg" alt="">
+          <h3>Coding</h3>
+          <p>I have started coding from my 12th standard.I am still practicing it to be a coder.</p>
+      </div>
+      <hr>
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <p class="contact">If you also love coding like me then we can start working on new ideas.</p>
+        <a class="redbutton" href="mailto:jayeshmahajan1932000@gmail.com">Contact Me</a>
+      </div>
+    </div>
 
-<body>
-  <table cellspacing="20">
-    <tr>
-      <td><img src="Profile.jpg" alt="Profile Picture"></td>
-      <td>
-        <h1>Jayesh</h1>
-        <p><em>Student at <strong><a href="https://ves.ac.in/vesit/">VESIT</a></strong></em></p>
-        <p>I am an engineering student and I am currently doing electronics engineering.</p>
-      </td>
-    </tr>
-  </table>
-  <hr>
-  <h3>Education</h3>
-  <ul>
-    <li>Passed 10th from Saraswati Secondary School</li>
-    <li>Passed 12th from P.E.S.T.</li>
-  </ul>
-  <hr>
-  <a href="contact.html">Contact me</a>
-  <h3>Courses Done</h3>
-  <table cellspacing="10">
-    <thead>
-      <tr>
-        <th>Year</th>
-        <th>Name</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2016</td>
-        <td>MS-CIT</td>
-      </tr>
-      <tr>
-        <td>2020</td>
-        <td>Web Development</td>
-      </tr>
-    </tbody>
-  </table>
-  <hr>
-  <h3>Skills</h3>
-  <table cellspacing="10">
-    <tr>
-      <td>C</td>
-      <td>⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Java</td>
-      <td>⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Python</td>
-      <td>⭐⭐⭐⭐⭐</td>
-    </tr>
-  </table>
-</body>
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+      <a class="footer-link" href="https://instagram.com/">Instagram</a>
+      <p class="copyright">© 2020 Jayesh Mahajan.</p>
+    </div>
+
+  </body>
 </html>
